--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "www/scripts/celestrium"]
-	path = www/scripts/celestrium
+[submodule "src/www/scripts/celestrium"]
+	path = src/www/scripts/celestrium
 	url = https://github.com/jdhenke/celestrium.git
